--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "flux"
   ],
   "devDependencies": {
+    "babel": "^4.3.0",
+    "babelify": "^5.0.3",
     "bluebird": "^2.3.11",
     "body-parser": "^1.9.3",
     "browserify": "^5.12.0",
@@ -27,11 +29,12 @@
     "chai-as-promised": "^4.1.1",
     "cheerio": "^0.18.0",
     "cookie-parser": "^1.3.3",
+    "esprima-fb": "^12001.1.0-dev-harmony-fb",
     "express": "^4.10.2",
     "jquery": "^2.1.1",
     "js-yaml": "^3.2.3",
-    "jsxcs": "0.0.3",
-    "jsxhint": "^0.4.14",
+    "jscs": "^1.11.3",
+    "jsxhint": "^0.11.1",
     "karma": "^0.12.24",
     "karma-bro": "^0.10.0",
     "karma-chrome-launcher": "^0.1.5",
@@ -45,7 +48,6 @@
     "mocha-spec-cov": "0.0.3",
     "react": "^0.12.0",
     "react-router": "^0.11.4",
-    "reactify": "^0.14.0",
     "semver": "^4.2.0",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
@@ -62,9 +64,7 @@
     "url": "https://github.com/jhollingworth/marty/issues"
   },
   "browserify": {
-    "transform": [
-      "reactify"
-    ]
+    "transform": ["babelify"]
   },
   "homepage": "https://martyjs.org",
   "dependencies": {
